# airflow-dag-builder

./: .gitignore  LICENSE  README.md  makefile  package-lock.json  package.json  pyproject.toml  tailwind.config.js
airflow/: docker-compose.yaml
airflow/plugins/: dag_builder_plugin.py
airflow/plugins/dag_builder/: main.py
airflow/plugins/dag_builder/operators/: __init__.py  catalog.py  signature.py
airflow/plugins/dag_builder/static/css/: main.86ad977f.css  main.86ad977f.css.map
airflow/plugins/dag_builder/static/js/: 200.74a1d39f.chunk.js  200.74a1d39f.chunk.js.map  539.90541158.chunk.js  539.90541158.chunk.js.map  787.f2055023.chunk.js  787.f2055023.chunk.js.map  main.6a0fbbff.js  (+2 more)
airflow/plugins/templates/: test.html
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.js  index.css  store.js
frontend/src/api/: useOpertorDefinitions.js
frontend/src/flow-builder/: FlowBuilder.jsx  NodeCatalog.jsx  NodeSetting.jsx  index.jsx
frontend/src/flow-builder/graph/: nodes.js
frontend/src/flow-builder/node-catalog/: Node.jsx  NodeList.jsx  index.jsx
frontend/src/flow-builder/node-settings/: SettingInputText.jsx  SettingsAccordionItem.jsx  SettingsBlock.jsx  index.jsx
frontend/src/utils/: AlertErrorCover.jsx  DragVertical.jsx  functools.js
scripts/: build.py
scripts/templates/: builder.html.jinja
src/: App.js  FlowSection.jsx
src/flow-builder/: FlowBuilder.jsx  NodeCatalog.jsx  NodeCatalogBar.jsx  NodeSettingBar.jsx  style.css
src/flow-builder/graph/: edges.js  nodes.js
src/graph/: nodes.js
(+3 files in other folders)
