[tool.poetry]
name = "airflow-dag-builder"
version = "0.1.0"
license = "Apache-2.0"
description = "Airflow plugin to create/edit Dags via drag-and-drop on a convenient UI"
authors = ["Joffrey Bienvenu <joffreybvn@gmail.com>"]
repository = "https://github.com/Joffreybvn/airflow-dag-builder"
readme = "README.md"
keywords = ["airflow", "airflow-plugins"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "3.9.*"

[tool.poetry.group.plugin.dependencies]
docstring-parser = "^0.15"

[tool.poetry.group.dev.dependencies]
apache-airflow = "^2.6.3"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.masonry.api"
